[package]
name = "error_handling_debug"
version = "0.1.0"
authors = ["Ari7"]

[dependencies]
futures = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-proto = "0.1"
# tokio-proto = { path = "../../../../../tokio-proto" }
tokio-service = "0.1"
bytes = "0.4"
log = "0.3"
env_logger = "0.3"
docopt = "0.7"
rustc-serialize = "0.3"

tokio-line-streaming = { path = "../.." }